--- a/animals/baboon/package.json
+++ b/animals/baboon/package.json
@@ -4,20 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node src/server.ts",
+    "dev": "tsc --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@lit-labs/ssr": "^1.0.0-rc.1",
-    "express": "^4.17.1",
     "lit": "^2.0.0-rc.2"
   },
   "devDependencies": {
-    "@types/express": "^4.17.13",
     "@types/node": "^16.4.12",
+    "@web/dev-server": "^0.1.20",
+    "@web/dev-server-esbuild": "^0.2.12",
+    "esbuild": "^0.11.23",
+    "ts-lit-plugin": "^1.2.1",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
   }
