--- a/animals/baboon/tsconfig.json
+++ b/animals/baboon/tsconfig.json
@@ -1,6 +1,32 @@
 {
     "compilerOptions": {
-        "experimentalDecorators": true,
-        "esModuleInterop": true
-    }
-}
+      "target": "es6",
+      "module": "es2020",
+      "lib": ["es2020", "DOM", "DOM.Iterable"],
+      "declaration": true,
+      "declarationMap": true,
+      "sourceMap": true,
+      "inlineSources": true,
+      "outDir": "./public",
+      "rootDir": "./src",
+      "strict": true,
+      "noUnusedLocals": true,
+      "noUnusedParameters": true,
+      "noImplicitReturns": true,
+      "noFallthroughCasesInSwitch": true,
+      "noImplicitAny": true,
+      "noImplicitThis": true,
+      "moduleResolution": "node",
+      "allowSyntheticDefaultImports": true,
+      "experimentalDecorators": true,
+      "forceConsistentCasingInFileNames": true,
+      "plugins": [
+        {
+          "name": "ts-lit-plugin",
+          "strict": true
+        }
+      ]
+    },
+    "include": ["src/**/*.ts"],
+    "exclude": []
+  }
