--- a/rei/rei-api/Cargo.toml
+++ b/rei/rei-api/Cargo.toml
@@ -1,8 +1,4 @@
-[package]
-name = "rei-api"
-version = "0.1.0"
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
+[workspace]
+members = [
+    "crates/rest",
+]
