--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,2 +1,10 @@
 {
+    "[html]": {
+        "editor.suggest.insertMode": "replace",
+        "gitlens.codeLens.scopes": [
+            "document"
+        ],
+        "editor.formatOnSave": true,
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    }
 }
