--- a/llm-marp/package.json
+++ b/llm-marp/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "pdf": "npx @marp-team/marp-cli@latest llm-prompt-issues.md -o output.pdf --pdf-outlines"
+    "build": "npx @marp-team/marp-cli@latest llm-prompt-issues.md"
   },
   "author": "",
   "license": "ISC",
